# apple_health_export

./: .gitignore  README.md  justfile  pyproject.toml
scripts/: export_csv.py
